Client - Fixed overflow issues

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,7 +39,6 @@
   scroll-behavior: auto;
 }
 
-html,
 body {
   overflow-x: hidden;
 }
