--- a/client/src/layouts/FooterFireflies/style.scss
+++ b/client/src/layouts/FooterFireflies/style.scss
@@ -2,8 +2,8 @@
   overflow: hidden;
   position: absolute;
   bottom: 0;
-  left: -20vw;
-  width: 120vw;
+  left: 0;
+  width: 100%;
   height: 40em;
 
   .right {
